--- a/index.html
+++ b/index.html
@@ -415,18 +415,43 @@
                         </li>
                     </ul>
                 </li>
+                <li class="sab">
+                    <h3 class="right-title">Подпишитесь на рассылку</h3>
+                    <form action="#" class="sab-form">
+                        <input type="email" name="email" placeholder="E-mail" class="sab-input">
+                        <button type="submit" class="btn-sab">Подписаться</button>
+
+                    </form>
+
+                </li>
             </ul>
+
         </div>
     </footer>
 
 
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop i" data-modal>
         <div class="modal">
             <button type="button" class="close-btn" data-modal-close>
                 <svg class="close-img-btn">
                     <use href="./img/sprite.svg#icon-x"></use>
                 </svg>
             </button>
+            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+            <form action="#" class="modal-form">
+                <div class="madal-fild">
+                    <label for="user-name" class="input-label">Имя</label>
+                    <input type="text" name="user-name" id="user-name" class="modal-input">
+                </div>
+                <div class="madal-fild">
+                    <label for="user-tel" class="input-label">Телефон</label>
+                    <input type="email" name="user-tel" id="user-tel" class="modal-input">
+                </div>
+                <div class="madal-fild">
+                    <label for="user-email" class="input-label">Почта</label>
+                    <input type="tel" name="user-email" id="user-email" class="modal-input">
+                </div>
+            </form>
         </div>
     </div>
 
