--- a/portfolio.html
+++ b/portfolio.html
@@ -275,6 +275,40 @@
                         </li>
                     </ul>
                 </li>
+
+                <li class="social-item">
+                    <a href="" class="social-link link footer-social-list">
+                        <svg class="social-icon footer-icon">
+                            <use href="./img/sprite.svg#icon-twiter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-item">
+                    <a href="" class="social-link link footer-social-list">
+                        <svg class="social-icon footer-icon">
+                            <use href="./img/sprite.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-item">
+                    <a href="" class="social-link link footer-social-list">
+                        <svg class="social-icon footer-icon">
+                            <use href="./img/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+            </li>
+            <li class="sab">
+                <h3 class="right-title">Подпишитесь на рассылку</h3>
+                <form action="#" class="sab-form">
+                    <input type="email" name="email" placeholder="E-mail" class="sab-input">
+                    <button type="submit" class="btn-sab">Подписаться</button>
+
+                </form>
+
+            </li>
+            </ul>
             </ul>
         </div>
     </footer>
